fix: Url table rows broken in liferay

--- a/projects/hslayers/src/css/hslayers-wo-bootstrap.scss
+++ b/projects/hslayers/src/css/hslayers-wo-bootstrap.scss
@@ -43,6 +43,9 @@ $list-group-item-padding-x: 1.25rem;
   .list-group-item+.list-group-item{
     border-top-width: 0px;
   }
+  .hs-url-table tr td {
+    display: table-cell;
+  }
 
   /* app css stylesheet */
   .icon-spin {
